deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jakebriscoe.com
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: jakebriscoe.com
  template:
    metadata:
      labels:
        app: jakebriscoe.com
    spec:
      containers:
        - image: jakebriscoe/spotify-content-service:v0.32.0
          name: jakebriscoe
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: "/"
