service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jakebriscoe
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: jakebriscoe.com
  type: NodePort
